--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="assets/plugins/slidercaptcha/slidercaptcha.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/light-mode.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -23,8 +22,7 @@
                 <div class="header-top-container container-xxl sabi d-flex">
                     <div class="d-flex align-items-center">
                         <a href="index.html">
-                            <img alt="Logo" src="assets/media/logo.svg" class="logo-header" />
-                            <img alt="Logo" src="assets/media/logo-light.svg" class="logo-light" />
+                            <img alt="Logo" src="assets/media/logo.svg" class="logo-light" />
                         </a>
                         <div class="links-header">
                             <a href="index.html" class="active">Home</a>
@@ -171,7 +169,7 @@
                                     </li>
                                     <li>
                                         <span>Group Name:</span>
-                                        <p>Lorem Ipsum</p>
+                                        <p><img src="assets/media/icons/group.png" alt="">Lorem Ipsum</p>
                                     </li>
                                     <li>
                                         <span>Card Type:</span>
@@ -251,6 +249,58 @@
                                             <li>
                                                 <span>Monthly Rate</span>
                                                 <p>100 EGP</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card consumption">
+                                <div class="card-body">
+                                    <button class="refresh">
+                                        <img src="assets/media/icons/icon-process.svg" alt="">
+                                    </button>
+                                    <h3 class="title-card">Consumption Details</h3>
+                                    <div class="consumption-list">
+                                        <p>
+                                            <span>Service</span>
+                                            <span>Total</span>
+                                        </p>
+                                        <ul class="list--scroll">
+                                            <li>
+                                                <img src="assets/media/icons/google-play.png" alt="">
+                                                <span>30</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/facebook.png" alt="">
+                                                <span>50</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/facebook-video.webp" alt="">
+                                                <span>100</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/google.png" alt="">
+                                                <span>70</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/itunes.png" alt="">
+                                                <span>50</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/youtube.png" alt="">
+                                                <span>150</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/roblox.png" alt="">
+                                                <span>20</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/pubg.png" alt="">
+                                                <span>300</span>
+                                            </li>
+                                            <li>
+                                                <img src="assets/media/icons/We.png" alt="">
+                                                <span>200</span>
                                             </li>
                                         </ul>
                                     </div>
