--- a/login.html
+++ b/login.html
@@ -46,14 +46,13 @@
     </div>
 
 
-    <div class="center-loader">
+    <!-- <div class="center-loader">
         <div class="loader-circle-9">
             Loading
           <span></span>
         </div>
-        <img src="assets/media/logo.svg" class="loader-dark" alt="">
         <img src="assets/media/logo-light.svg" class="loader-light" alt="">
-    </div>
+    </div> -->
 
     <!--begin::Javascript-->
     <script src="assets/plugins/global/plugins.bundle.js"></script>
