--- a/index-loader.html
+++ b/index-loader.html
@@ -11,7 +11,6 @@
     <link href="assets/plugins/datatable/datatables.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/light-mode.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -1205,8 +1204,7 @@
             Loading
           <span></span>
         </div>
-        <img src="assets/media/logo.svg" class="loader-dark" alt="">
-        <img src="assets/media/logo-light.svg" class="loader-light" alt="">
+        <img src="assets/media/logo.svg" class="loader-light" alt="">
     </div>
 
     <!--begin::Javascript-->
