--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@
                                             </li>
                                         </ul>
                                     </div>
+                                    <!-- <div class="no-consumption">
+                                        <img src="assets/media/icons/down-arrows.png" alt="">
+                                        <h3>There is no consumption</h3>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="card loyalty">
@@ -345,7 +349,10 @@
                                         </li>
                                         <li>
                                             <span>Port operational status:</span>
-                                            <em class="active"></em>
+                                            <div class="status active">
+                                                <em class="active"></em>
+                                                Active
+                                            </div>
                                             <!-- <em class="disabled"></em> -->
                                         </li>
                                         <li>
