--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 
 <head>
     <title>Customer 360</title>
@@ -11,7 +11,8 @@
     <link href="assets/plugins/datatable/datatables.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/slidercaptcha/slidercaptcha.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.dark.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/css/style.light.css" rel="stylesheet" type="text/css" /> -->
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -2777,16 +2778,6 @@
             onSuccess: function () {
                 // do something
             }
-        });
-    </script>
-    <script>
-        new CircleProgress('.loyalty-chart', {
-            min: 0,
-            max: 100,
-            value: 68,
-            clockwise: false,
-            textFormat: 'percent',
-            animationDuration: 1000
         });
     </script>
     <script>
