--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="assets/media/logo.svg" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/slidercaptcha/slidercaptcha.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.dark.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
