--- a/wifi-logs.html
+++ b/wifi-logs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 
 <head>
     <title>Customer 360</title>
@@ -11,8 +11,8 @@
     <link href="assets/plugins/datatable/datatables.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/slidercaptcha/slidercaptcha.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/light-mode.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.dark.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/css/style.light.css" rel="stylesheet" type="text/css" /> -->
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -23,8 +23,7 @@
                 <div class="header-top-container container-xxl sabi d-flex">
                     <div class="d-flex align-items-center">
                         <a href="index.html">
-                            <img alt="Logo" src="assets/media/logo.svg" class="logo-header" />
-                            <img alt="Logo" src="assets/media/logo-light.svg" class="logo-light" />
+                            <img alt="Logo" src="assets/media/logo.svg" class="logo-light" />
                         </a>
                         <div class="links-header">
                             <a href="index.html" class="active">Home</a>
@@ -62,8 +61,7 @@
                         </div>
 
                         <!--begin::Theme mode-->
-                        <a href="#" title="Change Theme"
-                            class="toggle-mode btn btn-icon btn-custom w-30px h-30px w-md-40px h-md-40px">
+                        <a href="#" title="Change Theme" class="toggle-mode btn btn-icon btn-custom w-30px h-30px w-md-40px h-md-40px">
                             <span class="svg-icon theme-light-show svg-icon-2">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -114,8 +112,7 @@
                                 </svg>
                             </span>
                         </a>
-                        <a href="login.html" title="Logout"
-                            class="logout-btn btn btn-icon btn-custom w-30px h-30px w-md-40px h-md-40px">
+                        <a href="login.html" title="Logout" class="logout-btn btn btn-icon btn-custom w-30px h-30px w-md-40px h-md-40px">
                             <i class="bi bi-box-arrow-right"></i>
                         </a>
                     </div>
