--- a/index-not-found.html
+++ b/index-not-found.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 
 <head>
     <title>Customer 360</title>
@@ -9,9 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="assets/media/logo.svg" />
     <link href="assets/plugins/datatable/datatables.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="assets/plugins/slidercaptcha/slidercaptcha.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/light-mode.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.dark.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/css/style.light.css" rel="stylesheet" type="text/css" /> -->
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -22,12 +23,11 @@
                 <div class="header-top-container container-xxl sabi d-flex">
                     <div class="d-flex align-items-center">
                         <a href="index.html">
-                            <img alt="Logo" src="assets/media/logo.svg" class="logo-header" />
-                            <img alt="Logo" src="assets/media/logo-light.svg" class="logo-light" />
+                            <img alt="Logo" src="assets/media/logo.svg" class="logo-light" />
                         </a>
                         <div class="links-header">
-                            <a href="#" class="active">Home</a>
-                            <a href="#">Wifi Logs</a>
+                            <a href="index.html" class="active">Home</a>
+                            <a href="wifi-logs.html">Wifi Logs</a>
                         </div>
                     </div>
                     <!--begin::Toolbar wrapper-->
