--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     placeholder="Search by Service No." />
                   <div class="phone-mobile">
                     <img src="assets/media/icons/wifi-router.png" class="active" alt="">
-                    <img src="assets/media/icons/telephone.png" class="" alt="">
-                    <img src="assets/media/icons/call.png" class="" alt="">
+                    <img src="assets/media/icons/telephone.png" alt="">
+                    <img src="assets/media/icons/call.png" alt="">
                   </div>
                 </form>
               </div>
@@ -130,37 +130,65 @@
       <div class="wrapper d-flex flex-column flex-row-fluid container-xxl">
         <div class="d-flex flex-row flex-column-fluid align-items-stretch">
           <div class="box-card">
-            <div class="name-numbers">
-              <h3>Mr. Ahmed</h3>
-              <div class="dropdown">
-                <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Choose Num.
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">
-                      <i class="bi bi-telephone"></i>
-                      235833173</a></li>
-                  <li><a class="dropdown-item active" href="#">
-                      <i class="bi bi-phone"></i>
-                      532542422</a></li>
-                  <li><a class="dropdown-item" href="#">
-                      <i class="bi bi-telephone"></i>
-                      235833173</a></li>
-                  <li><a class="dropdown-item" href="#">
-                      <i class="bi bi-phone"></i>
-                      532542422</a></li>
-                </ul>
+            <div class="box--flex-dts">
+              <div class="name-numbers">
+                <h3>Mr. Ahmed</h3>
+                <div class="dropdown">
+                  <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Choose Num.
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">
+                        <i class="bi bi-telephone"></i>
+                        235833173</a></li>
+                    <li><a class="dropdown-item active" href="#">
+                        <i class="bi bi-phone"></i>
+                        532542422</a></li>
+                    <li><a class="dropdown-item" href="#">
+                        <i class="bi bi-telephone"></i>
+                        235833173</a></li>
+                    <li><a class="dropdown-item" href="#">
+                        <i class="bi bi-phone"></i>
+                        532542422</a></li>
+                  </ul>
+                </div>
+                <div class="status active">
+                  <i class="bi bi-circle-fill"></i>
+                  Active
+                </div>
+                <!-- <div class="status disabled">
+                                  <i class="bi bi-circle-fill"></i>
+                                  Disabled
+                              </div> -->
+  
+                <button type="button" class="super-agent-btn">super agent</button>
               </div>
-              <div class="status active">
-                <i class="bi bi-circle-fill"></i>
-                Active
-              </div>
-              <!-- <div class="status disabled">
-                                <i class="bi bi-circle-fill"></i>
-                                Disabled
-                            </div> -->
-
-              <button type="button" class="super-agent-btn">super agent</button>
+              <ul class="awards">
+                <li aria-label="Audi" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/audi.png" alt="">
+                </li>
+                <li aria-label="iPhone" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/iPhone.png" alt="">
+                </li>
+                <li aria-label="Gold" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/gold.png" alt="">
+                </li>
+                <li aria-label="Mercedes" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/mercedes.png" alt="">
+                </li>
+                <li aria-label="World Cup" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/world-cup.png" alt="">
+                </li>
+                <li aria-label="Money" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/money.webp" alt="">
+                </li>
+                <li aria-label="Dubai" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/dubai.png" alt="">
+                </li>
+                <li aria-label="Haya Karima" data-microtip-position="bottom" role="tooltip">
+                  <img src="assets/media/icons/awards/hayakarima.png" alt="">
+                </li>
+              </ul>
             </div>
             <div class="card">
               <div class="card-body">
